SDK Release Notes
#################

.. contents:: List of Releases
   :depth: 1

UNRELEASED
##########

API Changes
***********
* ADDED IN: Tab: readonly property int index
* ADDED IN: ListItem.Empty: property bool confirmRemoval
* ADDED IN: OptionSelector: property bool multiSelection
* ADDED IN: ItemSelector: property bool multiSelection
* ADDED IN: OptionSelector: readonly property alias (real) itemHeight
* ADDED IN: ItemSelector: readonly property alias (real) itemHeight
* ADDED IN: OptionSelector: signal expansionCompleted()
* ADDED IN: ItemSelector: signal expansionCompleted()
* ADDED IN: OptionSelector: readonly property alias (bool) currentlyExpanded
* ADDED IN: ItemSelector: readonly property alias (bool) currentlyExpanded
* ADDED IN: OptionSelectorDelegate: property bool constrainImage
* ADDED IN: Empty: property alias divider
* ADDED IN: ListItems/OptionSelector: signal delegateSelected()
* REMOVED IN: OptionSelector: signal scroll()
* ADDED IN: OptionSelector: signal delegateSelected()
* ADDED: ListItem OptionSelector to Components/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/Ambiance/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruDark/ListItems
* ADDED: ListItemOptionSelectorStyle to Components/SuruGradient/ListItems
* REMOVED IN ALL: attached property ItemStyle
* ADDED IN OrientationHelper: property alias rotating
* ADDED IN OrientationHelper: property alias __orientationHelper
* ADDED IN OrientationHelper: property bool transitionEnabled
* DEPRECATED IN QuickUtils: property Item rootObject
* CHANGED IN OrientationHelper: property int __orientationHelper TO property int orientationHelper
* CHANGED IN Toolbar: property bool active TO property bool opened
* CHANGED IN Toolbar: property bool lock TO property bool locked
* CHANGED IN ToolbarActions: property bool active TO property bool opened
* CHANGED IN ToolbarActions: property bool lock TO property bool locked
* REMOVED IN Toolbar: property bool active