@@ -100,12 +100,12 @@ QtObject
 modules/Ubuntu/Components/OptionSelector.qml
 ListItem.Empty
     property var model
-    property bool expanded
+    property bool alwaysExpanded
     property bool multiSelection
     property bool colourImage
     property real containerHeight
     property int selectedIndex
-    readonly property bool currentlyExpanded
+    readonly property bool expanded
     readonly property real itemHeight
     signal delegateClicked(int index)
     signal expansionCompleted()
@@ -436,12 +436,12 @@ Image
 modules/Ubuntu/Components/ListItems/ItemSelector.qml
 ListItem.Empty
     property var model
-    property bool expanded
+    property bool alwaysExpanded
     property bool multiSelection
     property bool colourImage
     property real containerHeight
     property int selectedIndex
-    readonly property bool currentlyExpanded
+    readonly property bool expanded
     readonly property real itemHeight
     signal delegateClicked(int index)
     signal expansionCompleted()
