@@ -35,7 +35,6 @@ Item {
             text: "TEST"
             delegate: selectorDelegate
             model: customModel
-            expanded: true
         }
 
         OptionSelectorDelegate {
@@ -86,12 +85,12 @@ Item {
          function test_expanded() {
              var listContainer = findChild(selector, "listContainer");
 
-             selector.expanded = false;
-             compare(listContainer.isExpanded, false, "isExpanded should be true if list is an expanded one");
+             selector.alwaysExpanded = false;
+             compare(listContainer.expanded, false, "expanded should be true if list is an expanded one");
              compare(listContainer.state, "collapsed", "state should be collapsed");
 
-             selector.expanded = true;
-             compare(listContainer.isExpanded, true, "isExpanded should be false if list is an expanded one");
+             selector.alwaysExpanded = true;
+             compare(listContainer.expanded, true, "expanded should be false if list is an expanded one");
              compare(listContainer.state, "expanded", "state should be expanded");
          }
 
@@ -120,14 +119,6 @@ Item {
          function test_image_constraint() {
             var image = findChild(testDelegate, "icon");
             compare(image.height, testDelegate.height);
-         }
-
-         function test_signal() {
-             var listContainer = findChild(selector, "listContainer");
-             mouseMove(selector, 100, 100);
-             mouseClick(selector, 100, 100, Qt.LeftButton);
-             tryCompare(expansionSignal, "count", 1);
-             compare(clickedSignal.count, 1, "Clicked not emitted.");
          }
     }
 }
