@@ -9,6 +9,10 @@ UNRELEASED
 
 API Changes
 ***********
+* CHANGED IN: OptionSelector: property bool expanded TO bool alwaysExpanded
+* CHANGED IN: ItemSelector: property bool expanded TO bool alwaysExpanded
+* ADDED IN: OptionSelector: readonly property alias (bool) expanded
+* ADDED IN: ItemSelector: readonly property alias (bool) expanded
 * ADDED IN: Tab: readonly property int index
 * ADDED IN: ListItem.Empty: property bool confirmRemoval
 * ADDED IN: OptionSelector: property bool multiSelection
@@ -17,8 +21,6 @@ API Changes
 * ADDED IN: ItemSelector: readonly property alias (real) itemHeight
 * ADDED IN: OptionSelector: signal expansionCompleted()
 * ADDED IN: ItemSelector: signal expansionCompleted()
-* ADDED IN: OptionSelector: readonly property alias (bool) currentlyExpanded
-* ADDED IN: ItemSelector: readonly property alias (bool) currentlyExpanded
 * ADDED IN: OptionSelectorDelegate: property bool constrainImage
 * ADDED IN: Empty: property alias divider
 * ADDED IN: ListItems/OptionSelector: signal delegateSelected()
